--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.7",
     "morgan": "^1.10.0",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "socket.io": "^4.1.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
