--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.7",
+    "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "pg": "^8.6.0",
     "socket.io": "^4.1.3"
