--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "knex": "^0.95.7",
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "pg": "^8.6.0",
     "socket.io": "^4.1.3"
   },
