--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
+    "simple-peer": "^9.11.0",
     "socket.io-client": "^4.1.3",
     "web-vitals": "^1.1.2"
   },
